--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,12 @@ project(central_uart)
 target_sources(app PRIVATE
   src/main.c
 )
+
+
+# Include UART ASYNC API adapter
+target_sources_ifdef(CONFIG_BT_NUS_UART_ASYNC_ADAPTER app PRIVATE
+  src/uart_async_adapter.c
+)
 # NORDIC SDK APP END
 
 zephyr_library_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
