Fixed an issue with USB CDC configuration not building

--- a/prj_cdc.conf
+++ b/prj_cdc.conf
@@ -12,6 +12,7 @@ CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
 CONFIG_USB_CDC_ACM=y
 CONFIG_USB_CDC_ACM_LOG_LEVEL_OFF=y
+CONFIG_UART_USE_RUNTIME_CONFIGURE=y
 
 # Disable the UARTE0 enabled in default project configuration
 CONFIG_NRFX_UARTE0=n
